# solana-stablecoin-standard

./: ARCH.md  Build the Open Source.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  PROGRAM_DOCUMENTATION.md  README.md
sss-token/: .env.devnet  .env.localnet  .gitignore  Anchor.toml  Cargo.toml  DEVNET_PROOF.md  README.md  TESTS.md  TEST_SCRIPT_GUIDE.md  admin_phantom_key_pc.json  deploy-devnet.sh  package-lock.json  package.json  test-devnet.sh  test-enhanced.sh  test-localnet.sh  test.sh  update-sdk.sh
sss-token/backend/: .env  .env.devnet  .env.example  .env.localnet  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-dev.sh  start-devnet.sh  start-localnet.sh  test-backend.sh  view-events.sh
sss-token/backend/infrastructure/nginx/: nginx.conf
sss-token/backend/infrastructure/postgres/: init.sql
sss-token/backend/migrations/: fix-varchar-lengths.sql
sss-token/cli/: .sss-token.json  README.md  package-lock.json  package.json  test-cli.sh  tsconfig.json
sss-token/cli/src/: index.ts
sss-token/docs/: API.md  ARCHITECTURE.md  COMPLIANCE.md  FRONTEND_TESTING.md  IMPROVEMENTS.md  OPERATIONS.md  README.md  SDK.md  SSS-1.md  SSS-2.md
sss-token/frontend/: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  vercel.json
sss-token/frontend/src/app/: globals.css  layout.tsx  page.tsx
sss-token/frontend/src/app/admin/: page.tsx
sss-token/frontend/src/app/api/admin/: route.ts
sss-token/frontend/src/app/api/create/: route.ts
sss-token/frontend/src/app/create/: page.tsx
sss-token/frontend/src/app/holders/: page.tsx
sss-token/frontend/src/components/: Navigation.tsx  WalletProvider.tsx
sss-token/frontend/src/hooks/: useStablecoins.ts
sss-token/frontend/src/lib/: admin-api.ts  constants.ts  debug-indexer-transform.ts  fetch-indexer.ts  fetch-rpc.ts  fetch-stablecoins.ts  types.ts
sss-token/programs/sss-token/: Cargo.toml
sss-token/programs/sss-token/src/: lib.rs
sss-token/programs/sss-token/tests/: sss_token.rs
sss-token/programs/transfer-hook/: Cargo.toml
sss-token/programs/transfer-hook/src/: lib.rs
sss-token/programs/transfer-hook/tests/: transfer_hook.rs  transfer_hook_integration.rs
sss-token/scripts/: setup-test-env.sh  setup-test-wallets.ts
sss-token/scripts/test-wallets/: authority.json  blacklister.json  config.json  minter.json  pauser.json  seizer.json  treasury.json  user.json
sss-token/sdk/: .gitignore  IDL_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  TEST_SETUP.md  package.json  tsconfig.json
sss-token/sdk/examples/: basic-usage.ts
sss-token/sdk/src/: constants.ts  idl.json  index.ts  pda.ts  program.ts  sss_token.json  stablecoin.ts  types.ts  utils.ts
sss-token/sdk/tests/: sdk-enhanced.test.ts  sdk.test.ts
sss-token/tests/: devnet-test.ts  sss-token.ts
sss-token/trident-tests/: Cargo.toml
sss-token/trident-tests/src/: invariants.rs  lib.rs  test_builder.rs
