[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer Hook Program for Solana Stablecoin Standard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
solana-sdk-ids = "=2.2.0"