[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer Hook Program for Solana Stablecoin Standard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
spl-token-2022 = { version = "8", features = ["no-entrypoint"] }
